--- a/package.json
+++ b/package.json
@@ -28,12 +28,16 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "libphonenumber-js": "^1.12.7",
     "moment": "^2.30.1",
+    "ngrok": "^5.0.0-beta.2",
     "nodemailer": "^7.0.0",
     "nodemon": "^3.1.10",
+    "path": "^0.12.7",
     "prisma": "^6.7.0",
+    "socket.io": "^4.8.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "validator": "^13.15.0",
